# qontinui-inspect

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
src/: lib.rs  main.rs
src-frontend/: index.html  main.js  styles.css
